[project]
name = "utau-rank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "imagehash>=4.3.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "requests>=2.34.2",
    "torchvision>=0.27.1",
    "uvicorn>=0.49.0",
]

