[project]
name = "utau-rank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "numpy>=2.5.0",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "torchvision>=0.27.1",
    "uvicorn>=0.49.0",
]

